# SurvivalPFN

./: .gitignore  CITATION.cff  LICENSE  README.md  env-cpu.yaml  env.yaml  pyproject.toml  pytest.ini  requirements.txt  train.py
conf/: train.yaml
conf/callbacks/: checkpoint.yaml  eval_survival.yaml
conf/experiment/: default.yaml  pretrained.yaml  scaled.yaml  simple.yaml
conf/meta_dataset/: kitchen_sink_prior.yaml  mixture_prior.yaml  naive_prior.yaml  survival_dist_prior.yaml
conf/model/: tabdpt_long_context.yaml  tabdpt_long_context_pretrained.yaml  tabdpt_long_context_scaled.yaml
conf/optimizer/: adam.yaml  adamw.yaml  schedulefree_adamw.yaml
conf/resume_training/: enabled.yaml
conf/table_generator/: kitchen_sink.yaml  tabdpt.yaml
conf/trainer/: default.yaml
conf/wandb/: enabled.yaml
examples/: quickstart.py
results/paper/: benchmark_results.csv
survivalpfn/: __init__.py  evaluation.py  survival_estimator.py  utils.py
survivalpfn/callbacks/: __init__.py  base.py  checkpoint.py  context.py  eval.py
survivalpfn/inference/: __init__.py  evaluate.py  paper.py  paper_results.py  run.py
survivalpfn/inference/data/: __init__.py  util.py
survivalpfn/models/: Query_strategy.md  __init__.py  constants.py  icl_model.py  loading.py  model.py  transformer_layer.py  utils.py
survivalpfn/prior/: __init__.py  base_survival_prior.py  meta_dataset.py  mix_model_prior.py  naive_survival_prior.py  survival_distribution_prior.py  utils.py
survivalpfn/prior/table_generators/: TabDPT.py  __init__.py  base.py
tests/: conftest.py  test_checkpoint_callback.py  test_datasets.py  test_env.py  test_icl.py  test_integration.py  test_priors.py  test_release_hygiene.py  test_survival_estimator.py  test_table_generators.py
