[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "survivalpfn"
version = "0.1.0"
description = "Prior-data fitted network for right-censored survival prediction."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
  { name="Shi-ang Qi", email="shiang.qi7@gmail.com" },
  { name="Vahid Balazadeh", email="balazadehvahid@gmail.com" },
]
keywords = [
  "survival-analysis",
  "right-censoring",
  "prior-data-fitted-network",
  "in-context-learning",
  "machine-learning",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "huggingface-hub",
  "lifelines",
  "numpy",
  "scikit-learn",
  "scipy",
  "torch>=2.5.1,<3",
  "tqdm",
]

[project.optional-dependencies]
benchmark = [
  "h5py",
  "matplotlib",
  "pandas",
  "SurvSet",
  "SurvivalEVAL",
]
dev = [
  "black",
  "build",
  "isort",
  "pytest",
  "pytest-cov",
  "twine",
]
train = [
  "hydra-core",
  "ninja",
  "omegaconf",
  "schedulefree",
  "wandb",
]

[project.urls]
Homepage = "https://github.com/rgklab/SurvivalPFN"
Repository = "https://github.com/rgklab/SurvivalPFN"
Issues = "https://github.com/rgklab/SurvivalPFN/issues"
Paper = "https://arxiv.org/abs/2605.15488"
Checkpoint = "https://huggingface.co/shi-ang/SurvivalPFN"

[tool.setuptools.packages.find]
include = ["survivalpfn*"]
exclude = ["conf*", "examples*", "results*", "tests*"]

[tool.isort]
skip = [
        "venv/",
        "survivalpfn_env/",
        ".pytest_cache/",
        "tests/conftest.py",
]

[tool.black]
line-length = 120
include = '\.py$'
exclude = '/venv/|/survivalpfn_env/|/\.pytest_cache/'
